# angular-tauri-snippets-manager

./: angular.json  package-lock.json  package.json
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts
src/app/components/dialogs/dialog-yes-no/: dialog-yes-no.component.css  dialog-yes-no.component.html  dialog-yes-no.component.spec.ts  dialog-yes-no.component.ts
src/app/components/editor/: editor.component.css  editor.component.html  editor.component.ts
src/app/components/list/: list.component.css  list.component.html  list.component.ts
src/app/services/: snippet.service.ts
src/app/stores/: snippets.store.ts
