[package]
name = "angular-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-confirm", "fs-remove-file", "fs-read-dir", "fs-read-file", "fs-exists", "fs-create-dir", "fs-write-file", "window-unmaximize", "window-start-dragging", "window-minimize", "window-close", "window-maximize", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
